--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
       <div class="btn-group">
         
-        <a class="btn" href="https://wa.me/0895410499700" target="_blank"
+        <a class="btn" href="https://wa.me/+62895410499700" target="_blank"
           >WhatsApp</a
         >
         <a
@@ -258,3 +258,4 @@
     </script>
   </body>
 </html>
+
