Update and rename ChocoCrave.html to index.html

--- a/index.html
+++ b/index.html
@@ -235,12 +235,12 @@
   <body>
     <header>
       <div class="nav-left">
-        <a href="ChocoCrave.html" style="display: flex; align-items: center">
+        <a href="index.html" style="display: flex; align-items: center">
           <img src="gatau2.png" alt="ChocoCrave Logo" />
         </a>
       </div>
       <nav>
-        <a href="ChocoCrave.html">Homepage</a>
+        <a href="index.html">Homepage</a>
         <a href="tentang.html">About ChocoCrave</a>
         <a class="cta" href="order.html">Order Now</a>
       </nav>
