--- a/tentang.html
+++ b/tentang.html
@@ -206,13 +206,13 @@
     <!-- NAVBAR -->
     <header>
       <div class="nav-left">
-        <a href="ChocoCrave.html">
+        <a href="index.html">
           <img src="gatau2.png" alt="ChocoCrave Logo" />
         </a>
       </div>
 
       <nav>
-        <a href="ChocoCrave.html">Homepage</a>
+        <a href="index.html">Homepage</a>
         <a href="tentang.html">About ChocoCrave</a>
         <a class="cta" href="order.html">Order Now</a>
       </nav>
