--- a/order.html
+++ b/order.html
@@ -328,10 +328,10 @@
   <body>
     <header>
       <div class="nav-left">
-        <a href="ChocoCrave.html"><img src="gatau2.png" /></a>
+        <a href="index.html"><img src="gatau2.png" /></a>
       </div>
       <nav>
-        <a href="ChocoCrave.html">Homepage</a>
+        <a href="index.html">Homepage</a>
         <a href="tentang.html">Tentang ChocoCrave</a>
         <a class="cta" href="order.html">Order Now</a>
       </nav>
