--- a/order.html
+++ b/order.html
@@ -332,7 +332,7 @@
       </div>
       <nav>
         <a href="index.html">Homepage</a>
-        <a href="tentang.html">Tentang ChocoCrave</a>
+        <a href="tentang.html">About ChocoCrave</a>
         <a class="cta" href="order.html">Order Now</a>
       </nav>
     </header>
@@ -624,3 +624,4 @@ Total : Rp ${total.toLocaleString()}`;
     </script>
   </body>
 </html>
+
