--- a/order.html
+++ b/order.html
@@ -572,15 +572,15 @@
         let total = 0;
 
         if (+classic.innerText) {
-          html += `<div>Classic : ${classic.innerText} box</div>`;
+          html += `<div>Classic Fudgy : ${classic.innerText} box</div>`;
           total += classic.innerText * price.classic;
         }
         if (+cheese.innerText) {
-          html += `<div>Cheese : ${cheese.innerText} box</div>`;
+          html += `<div>Cheese Sprinkle : ${cheese.innerText} box</div>`;
           total += cheese.innerText * price.cheese;
         }
         if (+almond.innerText) {
-          html += `<div>Almond : ${almond.innerText} box</div>`;
+          html += `<div>Almond Bliss : ${almond.innerText} box</div>`;
           total += almond.innerText * price.almond;
         }
 
